# php-basic-auth

./: .gitignore  .pre-commit-config.yaml  index.php  login.php  package.json  pyproject.toml
.github/workflows/: tests.yml
api/: auth.php  db.php  logout.php  utils.php
assets/: main.js  signup.css  signup.js  validate.js
tests/: test_index.py
tests/config/: server.py  ui.py
tests/elements/: index.py
